app deployment as single file
remove separate files

--- a/k8-demo-app.yml
+++ b/k8-demo-app.yml
@@ -1,13 +1,28 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: multi-container-demo
+  labels:
+    name: multi-container-demo
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 8080
+      protocol: TCP
+  selector:
+    app: multi-container-demo
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: container-lab-web
+  name: multi-container-demo
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: container-lab-web
+        app: multi-container-demo
     spec:
       containers:
         - name: web
