--- a/k8-demo-app.yml
+++ b/k8-demo-app.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: drkube-microsoft.azurecr.io/service-a
+          image: myk8acr-microsoft.azurecr.io/service-a
           env:
             - 
               name: LISTENPORT
@@ -40,7 +40,7 @@ spec:
           ports:
             - containerPort: 8080
         - name: api
-          image: drkube-microsoft.azurecr.io/service-b
+          image: myk8acr-microsoft.azurecr.io/service-b
           ports:
             - containerPort: 80
         - name: mycache
@@ -48,4 +48,4 @@ spec:
           ports:
             - containerPort: 6379
       imagePullSecrets:
-        - name: dr-acr-reader       
+        - name: acr-reader       
