update external dns name

--- a/docker-compose.env.production.yml
+++ b/docker-compose.env.production.yml
@@ -2,5 +2,5 @@
  services:
    service-a:
      labels:
-       com.microsoft.acs.dcos.marathon.vhost: "drdcosagents.westus.cloudapp.azure.com"
+       com.microsoft.acs.dcos.marathon.vhost: "dr-acs-demoagents.westus.cloudapp.azure.com"
 #
