--- a/k8-demo-app.yml
+++ b/k8-demo-app.yml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: myk8acr-microsoft.azurecr.io/service-a
+          image: drk8acr-microsoft.azurecr.io/service-a
           env:
             - 
               name: LISTENPORT
@@ -40,7 +40,7 @@ spec:
           ports:
             - containerPort: 8080
         - name: api
-          image: myk8acr-microsoft.azurecr.io/service-b
+          image: drk8acr-microsoft.azurecr.io/service-b
           ports:
             - containerPort: 80
         - name: mycache
