--- a/docker-compose.env.production.yml
+++ b/docker-compose.env.production.yml
@@ -2,4 +2,4 @@
  services:
    service-a:
      labels:
-       com.microsoft.acs.dcos.marathon.vhost: "<FQDN, or custom domain>"
+       com.microsoft.acs.dcos.marathon.vhost: "dr-acs-demoagents.westus.cloudapp.azure.com"
